# metaheuristics

./: .gitignore  Metaheuristics.sln  README.md  _config.yml  appveyor.yml
CSIRO.Metaheuristics/: CSIRO.Metaheuristics.csproj  CSIRO.Metaheuristics.nuspec  CoreInterfaces.cd  ICloningSupport.cs  IEnsembleObjectiveEvaluator.cs  IEvolutionEngine.cs  IFitnessAssignment.cs  IHyperCube.cs  IMhSubject.cs  IMonitoringEvent.cs  IObjectiveEvaluator.cs  IObjectiveScore.cs  IObjectiveScores.cs  IOptimizationResults.cs  IRandomizerFactory.cs  ISystemConfiguration.cs  ITerminationCondition.cs  Subject.cs
CSIRO.Metaheuristics.DataModel/: App.config  CSIRO.Metaheuristics.DataModel.csproj  ConvertOptimizationResults.cs  DataModel.cd  packages.config
CSIRO.Metaheuristics.DataModel/Properties/: AssemblyInfo.cs
CSIRO.Metaheuristics.DataModel/Tests/: TestMhPersistence.cs
CSIRO.Metaheuristics.Logging/: CSIRO.Metaheuristics.Logging.csproj  InMemoryLoggerHelper.cs  Log4netAdapter.cs  LoggingUtils.cs  SystemConfigPatternConverter.cs  packages.config
CSIRO.Metaheuristics.Logging/Properties/: AssemblyInfo.cs
CSIRO.Metaheuristics.Parallel/: CSIRO.Metaheuristics.Parallel.csproj  CSIRO.Metaheuristics.Parallel.nuspec  ClassDiagram.cd  packages.config
CSIRO.Metaheuristics.Parallel/Dependencies/: README.txt
CSIRO.Metaheuristics.Parallel/Objectives/: CompositeObjectiveEvaluator.cs  MpiObjectiveEvaluator.cs
CSIRO.Metaheuristics.Parallel/Properties/: AssemblyInfo.cs
CSIRO.Metaheuristics.Parallel/SystemConfigurations/: MpiSysConfig.cs
CSIRO.Metaheuristics.R/: CSIRO.Metaheuristics.R.csproj  CSharpCompositeObjectiveEvaluator.cs  CompositeObjectiveEvaluator.cs  DebugHelpers.cs  LogHelper.cs  RCompositeObjectiveEvaluator.cs  app.config  packages.config
CSIRO.Metaheuristics.R/Properties/: AssemblyInfo.cs
CSIRO.Metaheuristics.Tests/: App.config  CSIRO.Metaheuristics.Tests.csproj  CSIRO.Metaheuristics.Tests.nuspec  TestCovarianceContravariance.cs  TestLogging.cs  TestMultiObjSCE.cs  TestSupportClasses.cs  packages.config
CSIRO.Metaheuristics.Tests/Properties/: AssemblyInfo.cs
CSIRO.Metaheuristics/CandidateFactories/: BestOfSampling.cs  LatinHypercubeSampling.cs  SeededSamplingFactory.cs  UniformRandomSamplingFactory.cs
CSIRO.Metaheuristics/DataModel/: ConvertOptimizationResults.cs  DataModel.cs
CSIRO.Metaheuristics/Doc/: ExpandedInterfaces.cd
CSIRO.Metaheuristics/Fitness/: NseBiasFitnessAssignment.cs  NseOnlyFitnessAssignment.cs  ZitlerThieleFitnessAssignment.cs
CSIRO.Metaheuristics/Logging/: ILoggerMh.cs  InMemoryLogger.cs  LoggerMhHelper.cs  SysConfigLogInfo.cs
CSIRO.Metaheuristics/Objectives/: DoubleObjectiveScore.cs  Evaluations.cs  MultipleScores.cs  ParetoComparer.cs  ParetoRanking.cs  RexpObjectiveDefinition.cs  ScoreComparison.cs  SingleObjectiveComparer.cs
CSIRO.Metaheuristics/Optimization/: AlgebraProvider.cs  ChainOptimizations.cs  CombinedSCEwithRosenbrock.cs  RosenbrockOptimizer.cs  ShuffledComplexEvolution.cs  UniformRandomSampling.cs
CSIRO.Metaheuristics/Properties/: AssemblyInfo.cs  SolutionInfo.cs
CSIRO.Metaheuristics/RandomNumberGenerators/: BasicRngFactory.cs
CSIRO.Metaheuristics/SystemConfigurations/: HyperCube.cs  HyperCubeOperations.cs  StringConfiguration.cs  UnivariateReal.cs
CSIRO.Metaheuristics/Tests/: TestMhHelper.cs  TestMultiObjSCE.cs  TestObjectives.cs  TestSupportClasses.cs
CSIRO.Metaheuristics/Utils/: MetaheuristicsHelper.cs
CSIRO.Modelling.Core/: CSIRO.Modelling.Core.csproj  CSIRO.Modelling.Core.nuspec  IModelSimulation.cs
CSIRO.Modelling.Core/Interop/: INativeHandle.cs
CSIRO.Modelling.Core/Properties/: AssemblyInfo.cs
CSIRO.Sys/: CSIRO.Sys.csproj  CSIRO.Sys.nuspec  ReflectionHelper.cs
CSIRO.Sys/Properties/: AssemblyInfo.cs
CSIRO.Utilities/: CSIRO.Utilities.csproj  CSIRO.Utilities.nuspec  DelimiterSeparatedValues.cs  RUtilities.cs
CSIRO.Utilities/Properties/: AssemblyInfo.cs
Documentation/Notes/: nuget.md
Documentation/Tutorials/: Readme.md  Tutorials.monodev.sln  Tutorials.sln
R/pkgs/: build_mh_package.cmd
src/: Metaheuristics.sln
src/CSIRO.Metaheuristics.DataModel/: CSIRO.Metaheuristics.DataModel.csproj  DbContextOperations.cs  OptimizationResultsContext.cs
src/CSIRO.Metaheuristics.Logging/: CSIRO.Metaheuristics.Logging.csproj  CSIRO.Metaheuristics.Logging.nuspec  Log4netAdapter.cs  LoggingUtils.cs
src/CSIRO.Metaheuristics.Parallel/: ClassDiagram.cd
src/CSIRO.Metaheuristics.R/: CSIRO.Metaheuristics.R.csproj  packages.config
src/CSIRO.Metaheuristics.Tests/: App.config  TestGeometricOperations.cs  TestMhHelper.cs  TestMultiObjSCE.cs  packages.config  (+1 more)
src/cpp/mhcpptest/: CMakeLists.txt  catch.hpp  main.cpp  mhcpptest.vcxproj  mhcpptest.vcxproj.filters
(+209 files in other folders)
